DataStructures/Compilation Issue
The user is calling for empty constructor but there's none provided.
Results in

[ss.java:48: error: constructor Node in class Node cannot be applied to given types;
        Node newNode = new Node();
                       ^
  required: int
  found: no arguments
  reason: actual and formal argument lists differ in length
ss.java:49: error: cannot find symbol
        newNode.data = data;
               ^
  symbol:   variable data
  location: variable newNode of type Node](url)
I don't want an empty constructor simple solution would be to use the parameterzed constructor already built.
